--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "js-cookie": "^3.0.5",
     "lightgallery": "^2.7.2",
     "nouislider": "^15.8.1",
+    "pincode-input": "^0.4.3",
     "rollup-plugin-terser": "^7.0.2",
     "sharp": "^0.33.5",
     "simplebar": "^6.2.7",
+    "sticky-sidebar": "^3.3.1",
     "swiper": "^11.2.1",
     "tippy.js": "^6.3.7",
     "vanilla-lazyload": "^19.1.3",
