--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "sticky-sidebar": "^3.3.1",
     "swiper": "^11.2.1",
     "tippy.js": "^6.3.7",
+    "toastify-js": "^1.12.0",
     "vanilla-lazyload": "^19.1.3",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-handlebars": "^2.0.0",
